[package]
name = "negative-impl"
version = "0.1.4"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/negative-impl"
keywords = ["macros"]
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
Negative trait implementations on stable Rust.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
static_assertions = "1"
